fix 508 compliance issue with gray-lighter to have appropriate contrast

--- a/app/assets/stylesheets/bootstrap3.less
+++ b/app/assets/stylesheets/bootstrap3.less
@@ -4,7 +4,7 @@
 @fa-font-path: "../fonts";
 
 @brand-primary: #0075C4;
-@gray-lighter: #f2f2f2;
+@gray-lighter: #f6f6f6;
 @gray-light: #e2e2e2;
 @gray-darker: #888;
 
